# relayer-extensions

./: .dockerignore  .gitignore  Cargo.toml  README.md  renegade-deploy-config.toml  rust-toolchain
auth/: Dockerfile
auth-server/: Cargo.toml
auth-server/migrations/2024-10-21-205301_add_api_keys_table/: up.sql
auth-server/src/: main.rs  schema.rs
auth-server/src/server/: handle_proxy.rs  mod.rs
auth/auth-server/: Cargo.toml  Dockerfile  diesel.toml
auth/auth-server-api/: Cargo.toml
auth/auth-server-api/src/: exchange_metadata.rs  fee_management.rs  key_management.rs  lib.rs  rfqt.rs
auth/auth-server/migrations/2024-10-21-205301_add_api_keys_table/: down.sql  up.sql
auth/auth-server/migrations/2025-07-01-210135_add_whitelist_flag/: down.sql  up.sql
auth/auth-server/migrations/2025-07-22-222752_add_user_fees_table/: down.sql  up.sql
auth/auth-server/migrations/2025-07-22-223537_add_default_fees_table/: down.sql  up.sql
auth/auth-server/migrations/2025-11-27-021052_add_rate_limits_table/: down.sql  up.sql
auth/auth-server/src/: darkpool.rs  error.rs  helpers.rs  http_utils.rs  logger.rs  main.rs  models.rs  relayer_client.rs  schema.rs
auth/auth-server/src/bundle_store/: helpers.rs  mod.rs
auth/auth-server/src/chain_events/: error.rs  listener.rs  mod.rs  tasks.rs  utils.rs  worker.rs
auth/auth-server/src/http_utils/: mod.rs  request_response.rs  stringify_formatter.rs
auth/auth-server/src/server/: api_auth.rs  caching.rs  handle_external_match.rs  handle_key_management.rs  handle_proxy.rs  helpers.rs  http.rs  mod.rs  queries.rs  rate_limiter.rs  redis_queries.rs  setup.rs  worker.rs
auth/auth-server/src/store/: helpers.rs  mod.rs
compliance/compliance-server/: Cargo.toml  Dockerfile
compliance/compliance-server/src/: chainalysis_api.rs  db.rs  error.rs  main.rs  schema.rs
darkpool-indexer/: Cargo.toml
darkpool-indexer/migrations/2025-10-29-225804_init_schema/: down.sql  up.sql
darkpool-indexer/src/: cli.rs  main.rs
darkpool-indexer/src/api/: error.rs  mod.rs
darkpool-indexer/src/crypto_mocks/: csprng.rs  encryption_stream.rs  identifier_stream.rs  mod.rs
darkpool-indexer/src/db/: error.rs  mod.rs  models.rs  schema.rs
darkpool-indexer/src/indexer/: error.rs  mod.rs
deploy/: Cargo.toml  deploy-config.toml
deploy/src/: build.rs  config.rs  deploy.rs  helpers.rs  main.rs
fee-sweeper/: Cargo.toml
fee-sweeper/migrations/2024-06-16-003335_create_wallets_table/: up.sql
fee-sweeper/src/: main.rs  relayer_client.rs
fee-sweeper/src/db/: models.rs  schema.rs
fee-sweeper/src/indexer/: index_fees.rs  mod.rs  queries.rs  redeem_fees.rs
funds-manager/: Cargo.toml  Dockerfile  diesel.toml
funds-manager/docs/: execution-client.md
funds-manager/funds-manager-api/: Cargo.toml
funds-manager/funds-manager-api/src/: auth.rs  lib.rs  serialization.rs
funds-manager/funds-manager-server/: Cargo.toml
funds-manager/funds-manager-server/src/: cli.rs  error.rs  handlers.rs  health_snapshot.rs  helpers.rs  logger.rs  main.rs  middleware.rs  mux_darkpool_client.rs  relayer_client.rs  server.rs
funds-manager/migrations/2024-06-15-202249_create_last_indexed_table/: down.sql
funds-manager/migrations/2024-06-15-203503_create_fees_table/: up.sql
funds-manager/migrations/2024-07-27-200942_create_hot_wallets_table/: down.sql  up.sql
funds-manager/migrations/2024-08-01-021728_add_internal_wallet_id/: down.sql  up.sql
funds-manager/migrations/2024-08-01-214330_add_gas_wallets_table/: down.sql  up.sql
funds-manager/migrations/2025-05-15-010726_chain_columns/: down.sql  up.sql
funds-manager/migrations/2025-05-15-174324_per_chain_vaults/: down.sql  up.sql
funds-manager/migrations/2025-07-24-192651_fee_redemption_index/: down.sql  up.sql
funds-manager/scripts/: create_gas_wallets.py  create_hot_wallet.py  fireblocks_list_vault_accounts.py  refill_gas.py  requirements.txt
funds-manager/src/: error.rs  main.rs  relayer_client.rs
funds-manager/src/db/: mod.rs
funds-manager/src/indexer/: index_fees.rs  mod.rs  queries.rs  redeem_fees.rs
indexer/darkpool-indexer/: Cargo.toml  Dockerfile
indexer/darkpool-indexer-api/: Cargo.toml
indexer/darkpool-indexer-api/src/: lib.rs  routes.rs
indexer/darkpool-indexer/integration/: Dockerfile  docker-compose.yml  main.rs  run-integration-tests.sh  test_args.rs  utils.rs
indexer/darkpool-indexer/src/: cli.rs  lib.rs  logger.rs  main.rs  types.rs
pool-runner/: Cargo.toml  Dockerfile
pool-runner/src/: admin_ws_listener.rs  cli.rs  config.rs  fill_waiter.rs  lib.rs  logger.rs  main.rs  metrics.rs
pool-runner/src/server/: mod.rs  runner.rs
price-reporter/: Cargo.toml  Dockerfile
price-reporter-client/: Cargo.toml
price-reporter-client/src/: error.rs  lib.rs  price_stream.rs
price-reporter/src/: cli.rs  errors.rs  http_server.rs  logger.rs  main.rs  pair_info.rs  price_stream_manager.rs  utils.rs  ws_server.rs
price-reporter/src/exchanges/: binance.rs  coinbase.rs  connection.rs  error.rs  kraken.rs  mod.rs  okx.rs  util.rs
price-reporter/src/http_server/: routes.rs
price-reporter/src/utils/: canonical_exchange.rs  metrics.rs  mod.rs  pair_info.rs
prover-service/api/: Cargo.toml
prover-service/api/src/: lib.rs
prover-service/server/: Cargo.toml
prover-service/server/src/: cli.rs  error.rs  logger.rs  main.rs  middleware.rs  prover.rs
renegade-solver/: Cargo.toml  Dockerfile  README.md
renegade-solver/src/: cli.rs  error.rs  main.rs
renegade-solver/src/arrival_control/: controller.rs  ema.rs  mod.rs
renegade-solver/src/chain_events/: listener.rs  mod.rs
renegade-solver/src/chain_state_cache/: cache.rs  mod.rs  worker.rs
renegade-solver/src/fee_cache/: fees.rs  mod.rs  worker.rs
renegade-solver/src/flashblocks/: listener.rs  mod.rs  multi_listener.rs  types.rs
renegade-solver/src/planner/: mod.rs
renegade-solver/src/tx_driver/: driver.rs  error.rs  mod.rs
renegade-solver/src/tx_store/: error.rs  mod.rs  store.rs
renegade-solver/src/uniswapx/: api_interaction.rs  api_types.rs  mod.rs  priority_fee.rs  renegade_api.rs  solve.rs
src/: errors.rs  (+11 more)
(+331 files in other folders)
