[workspace]
members = [
    "auth/auth-server",
    "auth/auth-server-api",
    "compliance/compliance-server",
    "compliance/compliance-api",
    "renegade-solver",
    "dealer/renegade-dealer",
    "dealer/renegade-dealer-api",
    "funds-manager/funds-manager-api",
    "funds-manager/funds-manager-server",
    "price-reporter",
    "price-reporter-client",
    "prover-service/server",
    "prover-service/api",
]

[profile.bench]
opt-level = 3
lto = true
debug = true

[profile.release]
opt-level = 3 # Full optimizations
lto = true

[workspace.dependencies]
# === Renegade Dependencies === #
renegade-darkpool-client = { package = "darkpool-client", git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
contracts-common = { git = "https://github.com/renegade-fi/renegade-stylus-contracts.git" }
renegade-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git", branch = "v1", features = [
    "auth",
] }
renegade-common = { package = "common", git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
renegade-config = { package = "config", git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
renegade-circuits = { package = "circuits", git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
renegade-util = { package = "util", git = "https://github.com/renegade-fi/renegade.git", branch = "v1", features = [
    "channels",
] }
renegade-price-reporter = { package = "price-reporter", git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
renegade-system-clock = { package = "system-clock", git = "https://github.com/renegade-fi/renegade.git", branch = "v1" }
renegade-solidity-abi = { package = "abi", git = "https://github.com/renegade-fi/renegade-contracts", rev = "1186dd6b30d33a20278a78ade3554fd0bb7b73d4" }


# === Blockchain Dependencies === #
alloy-contract = "1.0.42"
alloy-sol-types = "1.0.42"
alloy-dyn-abi = "1.0.42"
alloy-json-rpc = "1.0.42"
alloy-primitives = "1.0.42"
alloy = "1.0.42"

# === Database Dependencies === #
diesel = { version = "2.3" }
diesel-async = { version = "0.7" }
bb8 = "0.9"
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio-postgres = "0.7"

# === Misc Dependencies === #
thiserror = "2.0"
tracing = "0.1"
