[workspace]
members = [
    "auth/auth-server",
    "auth/auth-server-api",
    "compliance/compliance-server",
    "compliance/compliance-api",
    #"renegade-solver", # ignore for now
    "dealer/renegade-dealer",
    "dealer/renegade-dealer-api",
    "funds-manager/funds-manager-api",
    "funds-manager/funds-manager-server",
    "price-reporter",
    "price-reporter-client",
    "prover-service/server",
    "prover-service/api",
]

[profile.bench]
opt-level = 3
lto = true
debug = true

[profile.release]
opt-level = 3 # Full optimizations
lto = true

[workspace.dependencies]
# === Renegade Dependencies === #
renegade-darkpool-client = { package = "darkpool-client", git = "https://github.com/renegade-fi/renegade.git" }
renegade-darkpool-types = { package = "darkpool-types", git = "https://github.com/renegade-fi/renegade.git" }
contracts-common = { git = "https://github.com/renegade-fi/renegade-stylus-contracts.git" }
renegade-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git" }
renegade-external-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git", default-features = false }
renegade-types-core = { package = "types-core", git = "https://github.com/renegade-fi/renegade.git", features = ["hmac"] }
renegade-config = { package = "config", git = "https://github.com/renegade-fi/renegade.git" }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git" }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git" }
renegade-circuits-core = { package = "circuits-core", git = "https://github.com/renegade-fi/renegade.git" }
renegade-crypto = { package = "crypto", git = "https://github.com/renegade-fi/renegade.git" }
renegade-util = { package = "util", git = "https://github.com/renegade-fi/renegade.git", features = [
    "channels",
] }
renegade-price-reporter = { package = "price-reporter", git = "https://github.com/renegade-fi/renegade.git" }
renegade-system-clock = { package = "system-clock", git = "https://github.com/renegade-fi/renegade.git" }
#renegade-solidity-abi = { package = "abi", git = "https://github.com/renegade-fi/renegade-contracts", default-features = false }
renegade-solidity-abi = { package = "abi", path = "../renegade-contracts/abi", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }

# === Blockchain Dependencies === #
alloy-contract = "1.0.32"
alloy-sol-types = "1.0.32"
alloy-dyn-abi = "1.0.32"
alloy-json-rpc = "1.0.32"
alloy-primitives = "1.0.32"
alloy = "1.0.32"

# === Database Dependencies === #
diesel = { version = "2.3" }
diesel-async = { version = "0.7" }
bb8 = "0.9"
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio-postgres = "0.7"

# === Misc Dependencies === #
thiserror = "2.0"
tracing = "0.1"
