[workspace]
resolver = "3"
members = [
    "auth/auth-server",
    "auth/auth-server-api",
    "compliance/compliance-server",
    "compliance/compliance-api",
    #"renegade-solver", # ignore for now
    "dealer/renegade-dealer",
    "dealer/renegade-dealer-api",
    "funds-manager/funds-manager-api",
    "funds-manager/funds-manager-server",
    "pool-runner",
    "price-reporter",
    "price-reporter-client",
    "prover-service/server",
    "prover-service/api",
]

[profile.bench]
opt-level = 3
lto = true
debug = true

[profile.release]
opt-level = 3 # Full optimizations
lto = true

[workspace.dependencies]
# === Renegade Dependencies === #
renegade-darkpool-client = { package = "darkpool-client", git = "https://github.com/renegade-fi/renegade.git" }
renegade-darkpool-types = { package = "darkpool-types", git = "https://github.com/renegade-fi/renegade.git" }
contracts-common = { git = "https://github.com/renegade-fi/renegade-stylus-contracts.git" }
renegade-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git" }
renegade-external-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git", default-features = false }
renegade-types-core = { package = "types-core", git = "https://github.com/renegade-fi/renegade.git", features = ["hmac"] }
renegade-config = { package = "config", git = "https://github.com/renegade-fi/renegade.git" }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git" }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git" }
renegade-circuits-core = { package = "circuits-core", git = "https://github.com/renegade-fi/renegade.git" }
renegade-crypto = { package = "crypto", git = "https://github.com/renegade-fi/renegade.git" }
renegade-util = { package = "util", git = "https://github.com/renegade-fi/renegade.git", features = [
    "channels",
] }
renegade-price-reporter = { package = "price-reporter", git = "https://github.com/renegade-fi/renegade.git" }
renegade-system-clock = { package = "system-clock", git = "https://github.com/renegade-fi/renegade.git" }
renegade-solidity-abi = { package = "abi", git = "https://github.com/renegade-fi/renegade-contracts", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }

# === Blockchain Dependencies === #
alloy-contract = "1.0.32"
alloy-sol-types = "1.0.32"
alloy-dyn-abi = "1.0.32"
alloy-json-rpc = "1.0.32"
alloy-primitives = "1.0.32"
alloy = "1.0.32"

# === Database Dependencies === #
diesel = { version = "2.3" }
diesel-async = { version = "0.7" }
bb8 = "0.9"
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio-postgres = "0.7"

# === Misc Dependencies === #
thiserror = "2.0"
tracing = "0.1"

[patch.crates-io]
core2 = { git = "https://github.com/tcharding/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }

# DEVELOPMENT WORKAROUND: redirect renegade.git transitives pulled by
# renegade-contracts' `abi` crate (which pins darkpool-types to renegade.git
# default branch with no rev) to a local checkout of renegade.git. Without
# this, cargo compiles two copies of darkpool-types and trait impls
# (e.g., From<IDarkpoolV2::Intent> for Intent) resolve against the wrong copy.
#
# Paths are relative to this workspace root, assuming a sibling layout:
#   <parent>/relayer-extensions/   (this repo)
#   <parent>/renegade/             (renegade.git on the wj/pool-runner branch)
#
# Anyone building this branch must clone renegade.git as a sibling directory
# and check out wj/pool-runner there. Replace with a portable form
# (e.g., rev pin on renegade-contracts' darkpool-types dep) once the feature
# work merges back to main and the trait impls are colocated again.
[patch."https://github.com/renegade-fi/renegade"]
darkpool-types = { path = "../renegade/crates/darkpool-types" }
circuit-types = { path = "../renegade/crates/circuits/circuit-types" }
constants = { path = "../renegade/crates/constants" }
crypto = { path = "../renegade/crates/crypto" }
types-core = { path = "../renegade/crates/relayer-types/types-core" }
