[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# === HTTP Server === #
clap = { version = "4.0", features = ["derive", "env"] }
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# === Database === #
bb8 = "0.8"
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"

# === Misc Dependencies === #
bytes = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
