[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
aws-config = "1.0"
aws-sdk-ecr = "1.0"
aws-sdk-ecs = "1.0"
base64 = "0.22"
