[package]
name = "funds-manager"
description = "Manages custody of funds for protocol operator"
version = "0.1.0"
edition = "2021"

[dependencies]
# === CLI + Server === #
clap = { version = "4.5.3", features = ["derive", "env"] }
http-body-util = "0.1.0"
tokio = { version = "1.10", features = ["full"] }
warp = "0.3"


# === Infra === #
aws-sdk-secretsmanager = "1.37"
aws-config = "1.5"
diesel = { workspace = true, features = ["postgres", "numeric", "uuid"] }
diesel-async = { workspace = true, features = ["postgres"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio-postgres = "0.7.7"

# === Blockchain Interaction === #
alloy-sol-types = "0.3.1"
ethers = "2"

# === Renegade Dependencies === #
arbitrum-client = { workspace = true, features = ["rand"] }
renegade-api = { package = "external-api", workspace = true }
renegade-common = { package = "common", workspace = true }
renegade-constants = { package = "constants", workspace = true }
renegade-circuits = { package = "circuits", workspace = true }
renegade-circuit-types = { package = "circuit-types", workspace = true }
renegade-crypto = { workspace = true }
renegade-util = { package = "util", workspace = true }

# === Misc Dependencies === #
base64 = "0.22"
bigdecimal = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "1.1"
num-bigint = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
uuid = "1.8"
