[package]
name = "price-reporter-client"
version = "0.1.0"
edition = "2024"

[dependencies]

# === Networking Dependencies === #
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# === Renegade Dependencies === #
renegade-types-core = { package = "types-core", git = "https://github.com/renegade-fi/renegade.git" }
renegade-external-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git", default-features = false }

# === Misc Dependencies === #
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1", features = ["full"] }
bigdecimal = "0.4"
thiserror = "1.0"
tracing = "0.1"
futures-util = "0.3"
atomic_float = "1"
