[package]
name = "renegade-price-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
# === HTTP + Websockets === #
http-body-util = "0.1"
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-util = "0.1"
jsonwebtoken = "9.3"
matchit = "0.7"
reqwest = { version = "0.12.22", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tungstenite = "0.18"
url = "2.4"

# === Runtime + Concurrency === #
async-trait = "0.1"
crossbeam-skiplist = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = "1"
tokio-util = "0.7"

# === Serde === #
serde = "1"
serde_json = "1"

# === Telemetry === #
thiserror = { workspace = true }
tracing = "0.1"

# === Misc === #
clap = { version = "4.5.3", features = ["derive", "env"] }
atomic_float = "0.1"
derivative = "2.2.0"
itertools = "0.10"
lazy_static = "1.4"
ordered-float = "4.0"
rand = "0.8"
metrics = "=0.22.3"
dashmap = "6.1"

# === Renegade === #
renegade-api = { package = "external-api", workspace = true }
renegade-config = { package = "config", workspace = true }
renegade-common = { package = "common", workspace = true }
renegade-util = { package = "util", workspace = true }
