[package]
name = "renegade-solver"
version = "0.1.0"
edition = "2021"
authors = ["Renegade Team <hello@renegade.fi>"]
description = "An orderflow auction solver which routes through the Renegade darkpool"
license = "MIT"
repository = "https://github.com/renegade-fi/renegade-solver"
homepage = "https://renegade.fi"
readme = "README.md"
keywords = ["solver", "renegade", "protocol", "intents", "darkpool"]

[dependencies]
# === Server === #
clap = { version = "4.0", features = ["derive", "env"] }
reqwest = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = "0.1"
warp = "0.3"

# === Ethereum Libraries === #
alloy = { workspace = true , features = ["full"] }
alloy-primitives = { workspace = true, features = ["serde", "k256", "rand"] }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }
alloy-rpc-types-eth = { version = "1.0.23" }
alloy-rpc-types-engine = { version = "1.0.23", default-features = false, features = ["serde"]}
alloy-serde = { version = "1.0.23" }

# === Renegade Dependencies === #
renegade-common = { workspace = true }
renegade-config = { workspace = true }
renegade-constants = { workspace = true }
renegade-solidity-abi = { workspace = true }
renegade-sdk = { git = "https://github.com/renegade-fi/rust-sdk" }
renegade-util = { workspace = true, features = [
    "telemetry",
] }

# === Misc Dependencies === #
bimap = "0.6"
brotli = "8.0.1"
eyre = "0.6"
futures-util = "0.3.31"
lru = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5.0"
dashmap = "5"