[package]
name = "auth-server-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
renegade-api = { workspace = true }
renegade-circuit-types = { workspace = true }
alloy-primitives = { version = "1.0.0" }
num-bigint = "0.4"
