[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[features]
arbitrum = ["renegade-darkpool-client/arbitrum"]
base = ["renegade-darkpool-client/base", "dep:renegade-solidity-abi"]

[dependencies]
# === HTTP Server === #
clap = { version = "4.0", features = ["derive", "env"] }
http = "0.2"
http1 = { package = "http", version = "1.3.1" }
hyper = { version = "0.14", features = ["full"] }
ratelimit = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# === Database === #
diesel = { version = "2", features = ["postgres", "chrono", "uuid"] }
bb8 = "0.8"
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
redis = { version = "0.29", features = [
    "tokio-native-tls-comp",
    "connection-manager",
    "json",
    "uuid",
] }

# === Cryptography === #
aes-gcm = "0.10.1"
rand = "0.8.5"

# === Ethereum Libraries === #
alloy = { workspace = true, features = ["provider-ws"] }
alloy-primitives = { workspace = true, features = ["serde", "k256", "rand"] }
alloy-sol-types = { workspace = true }

# === Renegade Dependencies === #
auth-server-api = { path = "../auth-server-api" }
price-reporter-client = { path = "../../price-reporter-client" }
contracts-common = { workspace = true }
renegade-darkpool-client = { workspace = true }
renegade-circuit-types = { workspace = true }
renegade-common = { workspace = true }
renegade-constants = { workspace = true }
renegade-config = { workspace = true }
renegade-crypto = { workspace = true }
renegade-util = { workspace = true }
renegade-api = { workspace = true }
renegade-solidity-abi = { workspace = true, optional = true }
renegade-system-clock = { workspace = true }

# === Misc Dependencies === #
async-trait = "0.1"
base64 = "0.22.1"
bigdecimal = "0.4"
bytes = "1.0"
cached = "0.53"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
metrics = "=0.22.3"
num-bigint = "0.4"
atomic_float = "1"
rustls = "0.23"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["arbitrary_precision"] }
serde_urlencoded = "0.7"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[dev-dependencies]
eyre = "0.6"
