[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[features]
arbitrum = []
base = []

[dependencies]
# === HTTP Server === #
clap = { version = "4.0", features = ["derive", "env"] }
http = "0.2"
http1 = { package = "http", version = "1.3.1" }
hyper = { version = "0.14", features = ["full"] }
opentelemetry = "0.21"
opentelemetry-http = "0.10"
ratelimit = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-util = "0.7.17"
tracing-opentelemetry = "0.22"
warp = "0.3"

# === Database === #
diesel = { workspace = true, features = ["postgres", "chrono", "uuid"] }
bb8 = { workspace = true }
diesel-async = { workspace = true, features = ["postgres", "bb8"] }
tokio-postgres = { workspace = true }
postgres-native-tls = { workspace = true }
native-tls = { workspace = true }
redis = { version = "0.32", features = [
    "tokio-native-tls-comp",
    "connection-manager",
    "json",
    "uuid",
    "script",
] }

# === Cryptography === #
aes-gcm = "0.10.1"
rand = "0.8.5"

# === Ethereum Libraries === #
alloy = { workspace = true, features = ["provider-ws"] }
alloy-primitives = { workspace = true, features = ["serde", "k256", "rand"] }
alloy-sol-types = { workspace = true }
ruint = { version = "1.16", default-features = false, features = [
    "bigdecimal",
] }

# === Renegade Dependencies === #
auth-server-api = { path = "../auth-server-api" }
price-reporter-client = { path = "../../price-reporter-client" }
renegade-types-core = { package = "types-core", git = "https://github.com/renegade-fi/renegade.git", features = ["hmac"] }
renegade-config = { package = "config", git = "https://github.com/renegade-fi/renegade.git" }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git" }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git" }
renegade-crypto = { package = "crypto", git = "https://github.com/renegade-fi/renegade.git" }
renegade-darkpool-client = { package = "darkpool-client", git = "https://github.com/renegade-fi/renegade.git" }
renegade-util = { package = "util", git = "https://github.com/renegade-fi/renegade.git", features = ["blockchain", "telemetry"] }
renegade-system-clock = { package = "system-clock", git = "https://github.com/renegade-fi/renegade.git" }
renegade-solidity-abi = { package = "abi", git = "https://github.com/renegade-fi/renegade-contracts.git" }
renegade-external-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git", default-features = false, features = [
    "auth", "full-api"
] }
renegade-darkpool-types = { package = "darkpool-types", git = "https://github.com/renegade-fi/renegade.git" }

# === Misc Dependencies === #
async-trait = "0.1"
base64 = "0.22.1"
bigdecimal = "0.4"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures-util = "0.3"
lazy_static = "1.4"
metrics = "=0.22.3"
num-bigint = "0.4"
atomic_float = "1"
rustls = "0.23"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["arbitrary_precision"] }
serde_urlencoded = "0.7"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
eyre = "0.6"
