[package]
name = "compliance-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# === HTTP Server === #
http-body-util = "0.1.0"
warp = "0.3"
compliance-api = { path = "../compliance-api" }

# === Database === #
diesel = { workspace = true, features = ["postgres", "r2d2"] }

# === Renegade Dependencies === #
renegade-util = { workspace = true, features = [ "telemetry" ] }

# === Misc === #
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = { workspace = true }
