[package]
name = "funds-manager-api"
version = "0.1.0"
edition = "2021"

[dependencies]

renegade-api = { package = "external-api", workspace = true }
renegade-common = { package = "common", workspace = true, default-features = false, features = [
    "hmac",
] }

alloy-primitives = { version = "1.0.0", features = ["serde"] }
http = "0.2.12"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
uuid = "1.7.1"

[dev-dependencies]
rand = "0.8.5"
