[package]
name = "funds-manager-api"
version = "0.1.0"
edition = "2024"

[dependencies]
renegade-api = { workspace = true }
alloy-primitives = { version = "1.0.0", features = ["serde"] }
http = "0.2.12"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
uuid = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
