[package]
name = "funds-manager"
description = "Manages custody of funds for protocol operator"
version = "0.1.0"
edition = "2021"

[net]
git-fetch-with-cli = true

[http]
check-revoke = false

[dependencies]
# === CLI + Server === #
clap = { version = "4.5.3", features = ["derive", "env"] }
funds-manager-api = { path = "../funds-manager-api" }
hex = "0.4.3"
http-body-util = "0.1.0"
tokio = { version = "1.10", features = ["full"] }
warp = "0.3"

# === Infra === #
aws-sdk-secretsmanager = "1.37"
aws-sdk-s3 = "1.37"
aws-config = "1.5"
bb8 = "0.8"
diesel = { workspace = true, features = ["postgres", "numeric", "uuid"] }
diesel-async = { workspace = true, features = ["postgres", "bb8"] }
fireblocks-sdk = { git = "https://github.com/renegade-fi/fireblocks-sdk-rs.git", branch = "v2.0.1" }
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio-postgres = "0.7.7"

# === Blockchain Interaction === #
alloy-sol-types = { workspace = true }
alloy-dyn-abi = { workspace = true, features = ["eip712"] }
alloy-json-rpc = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy = { workspace = true }
ethers = "2"

# === Renegade Dependencies === #
price-reporter-client = { path = "../../price-reporter-client" }
renegade-darkpool-client = { package = "darkpool-client", workspace = true, features = [
    "all-chains",
] }
renegade-api = { package = "external-api", workspace = true }
renegade-common = { package = "common", workspace = true }
renegade-config = { package = "config", workspace = true }
renegade-constants = { package = "constants", workspace = true }
renegade-circuits = { package = "circuits", workspace = true }
renegade-circuit-types = { package = "circuit-types", workspace = true }
renegade-crypto = { workspace = true }
renegade-util = { package = "util", workspace = true }

# === Misc Dependencies === #
base64 = "0.22"
bigdecimal = { version = "0.4", features = ["serde"] }
bytes = "1.5.0"
futures = "0.3"
http = "0.2"
itertools = "0.13"
metrics = "=0.22.3"
num-bigint = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
uuid = "1.16"
