[package]
name = "darkpool-indexer-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# === Renegade === #
renegade-constants = { workspace = true }
renegade-circuit-types = { package = "circuit-types", path = "/Users/akirillo/code/renegade/circuit-types" }

# === Blockchain === #
alloy-primitives = { workspace = true }

# === Misc === #
serde = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }