[package]
name = "darkpool-indexer-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# === Renegade === #
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2" }
renegade-darkpool-types = { package = "darkpool-types", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2", features = ["proof-system-types"] }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2" }

# === Blockchain === #
alloy-primitives = { workspace = true }

# === Misc === #
serde = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }